# defiant

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  build.rs  dhat-heap.json
benchmarks/benches/: allocations.rs  dataset.rs
benchmarks/tests/: google_message2_decode.rs
conformance/: Cargo.toml
conformance/src/: main.rs
defiant/: Cargo.toml  README.md  dhat-heap.json
defiant-build/: Cargo.toml
defiant-build/src/: ast.rs  code_generator.rs  collections.rs  config.rs  context.rs  descriptor_ext.rs  extern_paths.rs  lib.rs  message_graph.rs
defiant-build/src/fixtures/deprecated/: _all_deprecated.rs
defiant-build/src/fixtures/field_attributes/: _expected_field_attributes.rs  _expected_field_attributes_formatted.rs
defiant-build/src/fixtures/helloworld/: _expected_helloworld.rs
defiant-derive/: Cargo.toml
defiant-derive/src/: lib.rs
defiant-derive/src/field/: group.rs  map.rs  message.rs  mod.rs  oneof.rs  scalar.rs
defiant-types/: Cargo.toml
defiant-types/src/: any.rs  compiler.rs  conversions.rs  datetime.rs  duration.rs  lib.rs  protobuf.rs  timestamp.rs
defiant/benches/: arena_benchmark.rs  message_sizes.rs  message_sizes_alloc.rs  message_sizes_alloc_simple.rs  varint.rs
defiant/src/: arena.rs  encoding.rs  error.rs  lib.rs  message.rs  types.rs
defiant/src/encoding/: length_delimiter.rs
defiant/tests/: advanced_fields_test.rs  allocation_comparison.rs  api_demo.rs  arena_maps.rs  arena_nested.rs  arena_oneof.rs  arena_person.rs  arena_repeated.rs  derive_arena_test.rs  map_string_test.rs  message_gen_test.rs  nested_group_test.rs  nested_message_test.rs  optional_message_test.rs  simple_test.rs  view_builder_poc.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: parse_date.rs  parse_duration.rs  proto2.rs  proto3.rs
prost/: Cargo.toml
prost-build/src/: ast.rs  code_generator.rs  config.rs  context.rs  lib.rs
prost-build/src/fixtures/deprecated/: _all_deprecated.rs
prost-build/src/fixtures/field_attributes/: _expected_field_attributes_formatted.rs
prost-build/src/fixtures/helloworld/: _expected_helloworld.rs
prost-derive/src/: lib.rs
prost-derive/src/field/: group.rs  map.rs  message.rs  mod.rs  oneof.rs  scalar.rs
prost-types/src/: any.rs  compiler.rs  conversions.rs  datetime.rs  duration.rs  protobuf.rs  timestamp.rs
prost/benches/: arena_benchmark.rs
prost/src/: arena.rs  encoding.rs  lib.rs  message.rs  name.rs  types.rs
prost/tests/: advanced_fields_test.rs  allocation_comparison.rs  api_demo.rs  arena_maps.rs  arena_nested.rs  arena_oneof.rs  arena_person.rs  arena_repeated.rs  derive_arena_test.rs  message_gen_test.rs  nested_message_test.rs  view_builder_poc.rs
protobuf/: Cargo.toml  build.rs
protobuf/src/: lib.rs
tests/: Cargo.toml  build.rs
tests-2015/: Cargo.toml
tests-2018/: Cargo.toml
tests-2024/: Cargo.toml
tests-no-std/: Cargo.toml
tests/defiant-path/: Cargo.toml  build.rs
tests/defiant-path/protos/: defiant_path.proto
tests/defiant-path/src/: lib.rs
tests/prost-path/: Cargo.toml  build.rs
tests/prost-path/src/: lib.rs
tests/reexported-defiant/: Cargo.toml
tests/reexported-defiant/src/: lib.rs
tests/reexported-prost/: Cargo.toml
tests/reexported-prost/src/: lib.rs
tests/single-include/: Cargo.toml  build.rs
tests/single-include/src/: main.rs
tests/single-include/src/outdir/: outdir.rs
tests/src/: bootstrap.rs  boxed_field.rs  custom_debug.rs  debug.rs  decode_error.rs  default_enum_value.rs  default_string_escape.rs  extern_paths.rs  generic_derive.rs  groups.rs  ident_conversion.rs  lib.rs  message_encoding.rs  nesting.rs  proto3_presence.rs  recursive_oneof.rs  submessage_without_package.rs  type_names.rs  unittest.rs  well_known_types.rs
tests/src/no_root_packages/: mod.rs
