[package]
name = "defiant"
readme = "README.md"
description = "A high-performance Protocol Buffers implementation with arena allocation for zero-copy deserialization. Forked from prost."
keywords = ["protobuf", "serialization", "arena", "zero-copy"]
categories = ["encoding"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["derive", "std"]
derive = ["dep:defiant-derive"]
no-recursion-limit = []
std = []

[dependencies]
bytes = { version = "1", default-features = false }
defiant-derive = { version = "0.1.0", path = "../defiant-derive", optional = true }
bumpalo = { version = "3.16", features = ["collections"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
proptest = "1"
rand = "0.9"
dhat = "0.3"

[[bench]]
name = "varint"
harness = false

[[bench]]
name = "arena_benchmark"
harness = false

[[bench]]
name = "message_sizes"
harness = false

[[bench]]
name = "message_sizes_alloc"
harness = false

[[bench]]
name = "message_sizes_alloc_simple"
harness = false
