[package]
name = "protobuf"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true

[dependencies]
defiant = { path = "../defiant" }
defiant-types = { path = "../defiant-types" }

[build-dependencies]
anyhow = "1.0.1"
defiant = { path = "../defiant" }
defiant-build = { path = "../defiant-build" }
tempfile = "3"
cmake = "0.1.51"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
