[package]
name = "tests-2024"
version = "0.0.0"
publish = false
edition = "2024"
authors.workspace = true

build = "../tests/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("edition-2015"))'] }

[dependencies]
anyhow = "1.0.1"
cfg-if = "1"
defiant = { path = "../defiant" }
defiant-types = { path = "../defiant-types" }

[dev-dependencies]
defiant-build = { path = "../defiant-build" }
tempfile = "3"
protobuf = { path = "../protobuf" }

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
defiant = { path = "../defiant" }
defiant-build = { path = "../defiant-build" }
