[package]
name = "defiant_path"
version = "0.1.0"
authors = ["Jerko Steiner <jerko.steiner@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
defiant = { path = "../../defiant" }
reexported_defiant = { path = "../reexported-defiant" }

[build-dependencies]
defiant = { path = "../../defiant" }
defiant-build = { path = "../../defiant-build" }

[package.metadata.cargo-machete]
ignored = ["reexported_defiant"]
