[package]
name = "reexported_prost"
version = "0.1.0"
authors = ["Jerko Steiner <jerko.steiner@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
defiant = { path = "../../defiant" }
defiant-types = { path = "../../defiant-types" }

[build-dependencies]
defiant-build = { path = "../../defiant-build" }
